# CV-Barber

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  output_cv.docx  pyproject.toml  railway.toml
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 3f9acfa5b0e2_initial_schema.py  4c5f60097ff1_fastapi_users_user_model.py  a1b2c3d4e5f6_add_cover_letter_to_applications.py  a7b8c9d0e1f2_email_verification_and_oauth.py  b2c3d4e5f6a7_add_text_hash_to_master_cvs.py  b8c9d0e1f2a3_add_feedback_table.py  c3d4e5f6a7b8_case_insensitive_username.py  c9d0e1f2a3b4_jd_supplement_company_research.py  d0e1f2a3b4c5_company_research_extra_facts.py  d4e5f6a7b8c9_add_template_artifact_section_map.py  e5f6a7b8c9d0_user_templates_and_template_id.py  f6a7b8c9d0e1_add_source_hash_to_user_templates.py
app/: .env.example  config.py  logging_config.py
app/api/: dependencies.py  main.py  models.py  rate_limit.py  render_helpers.py
app/auth/: config.py  manager.py  schemas.py  validation.py
app/db/: base.py  dependencies.py  models.py
app/extraction/: __init__.py  _columns.py  docx_.py  extractor.py  odt_.py  pdf.py
app/generation/: __init__.py  base_generator.py  docx_generator.py  generator_factory.py  pdf_generator.py  render_dispatch.py  section_filter.py  styles.py  template_registry.py
app/llm/: __init__.py  ats_scorer.py  base_client.py  chain_client.py  client_factory.py  cover_letter.py  exceptions.py  fallback_client.py  gemini_client.py  groq_client.py  key_rotator.py  ollama_client.py  openai_compat_client.py  parser.py  prompt_loader.py  prompts.py  providers.py  qa.py  retry.py  scorer.py  template_converter.py
app/pipeline/: __init__.py  dedup.py  extract.py  pipeline.py  schema_extract.py  spans.py  structure.py  tiers.py
app/schemas/: ats.py  base_cv.py  config.py  cover_letter.py  cv_blocks.py  master_cv.py  qa.py  tailored_cv.py
app/services/: email.py  search.py  verification.py
app/static/: app.js  index.html  styles.css
frontend/: index.html  package-lock.json  vite.config.js
frontend/src/: App.jsx  index.css
scripts/: llm_smoke.py  smoke_test_llm.py
tests/: conftest.py
tests/api/: conftest.py  test_admin.py  test_enrich.py  test_feedback.py  test_parse_warnings.py  test_qa_lookup.py  test_rate_limit_config.py  test_user_templates_crud.py
tests/auth/: test_email_verification.py  test_oauth_username.py  test_password_reset.py  test_username_validation.py
tests/extraction/: test_columns.py  test_extractor.py  (+3 more)
(+101 files in other folders)
