[tool.poetry]
name = "pp"
version = "0.1.0"
description = ""
authors = ["MoaazEmam <moaaz.emam06@eng-st.cu.edu.eg>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.12.5"
pydantic-settings = "^2.13.1"
pymupdf = "^1.27.2.2"
python-docx = "^1.2.0"
pytest = "^9.0.2"
requests = "^2.32.5"
google-genai = "^1.68.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
