[tool.poetry]
name = "pp"
version = "0.1.0"
description = ""
authors = ["MoaazEmam <moaaz.emam06@eng-st.cu.edu.eg>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.12.5"
pydantic-settings = "^2.13.1"
pymupdf = "^1.27.2.2"
python-docx = "^1.2.0"
pytest = "^9.0.2"
requests = "^2.32.5"
google-genai = "^1.68.0"
weasyprint = "^68.1"
jinja2 = "^3.1.6"
fastapi = "^0.135.1"
uvicorn = "^0.42.0"
python-multipart = "^0.0.22"
black = "^26.3.1"
ipykernel = "^7.2.0"
pytz = "^2026.1.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.poetry.scripts]
serve = "app.api.main:app"
