[tool.poetry]
name = "pp"
version = "0.1.0"
description = ""
authors = ["MoaazEmam <moaaz.emam06@eng-st.cu.edu.eg>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.12.5"
pydantic-settings = "^2.13.1"
pymupdf = "^1.27.2.2"
python-docx = "^1.2.0"
pytest = "^9.0.2"
google-genai = "^1.68.0"
weasyprint = "^68.1"
jinja2 = "^3.1.6"
fastapi = "^0.135.1"
uvicorn = "^0.42.0"
python-multipart = "0.0.20"
black = "^26.3.1"
ipykernel = "^7.2.0"
pytz = "^2026.1.post1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
asyncpg = "^0.30.0"
alembic = "^1.13.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
structlog = "^24.4.0"
httpx = "^0.28.1"
fastapi-users = {extras = ["sqlalchemy"], version = "^14.0.1"}
groq = ">=0.28.0"
slowapi = "^0.1.9"
openai = "^2.41.0"
httpx-oauth = "^0.17.0"


[tool.poetry.group.dev.dependencies]
aiosqlite = "^0.22.1"
pytest-asyncio = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.poetry.scripts]
serve = "app.api.main:app"
